@@ -60,7 +60,7 @@ typedef struct music_handler_s
 
 static music_handler_t wanted_handlers[] =
 {
-	{ CODECTYPE_OGG,  BGM_STREAMER, -1,  "ogg", MUSIC_DIRNAME, NULL },
+	{ CODECTYPE_VORBIS,BGM_STREAMER,-1,  "ogg", MUSIC_DIRNAME, NULL },
 	{ CODECTYPE_MP3,  BGM_STREAMER, -1,  "mp3", MUSIC_DIRNAME, NULL },
 	{ CODECTYPE_FLAC, BGM_STREAMER, -1, "flac", MUSIC_DIRNAME, NULL },
 	{ CODECTYPE_WAV,  BGM_STREAMER, -1,  "wav", MUSIC_DIRNAME, NULL },
@@ -80,7 +80,7 @@ static music_handler_t *music_handlers = NULL;
 #define ANY_CODECTYPE	0xFFFFFFFF
 #define MIDI_TYPES	(CODECTYPE_MID | MIDIDRIVER_MID)
 #define MIDITYPE(x)	(((x) & MIDI_TYPES) != 0)
-#define CDRIP_TYPES	(CODECTYPE_OGG | CODECTYPE_MP3 | CODECTYPE_FLAC | CODECTYPE_WAV)
+#define CDRIP_TYPES	(CODECTYPE_VORBIS | CODECTYPE_MP3 | CODECTYPE_FLAC | CODECTYPE_WAV)
 #define CDRIPTYPE(x)	(((x) & CDRIP_TYPES) != 0)
 
 typedef struct midi_handle_s
