@@ -89,9 +89,8 @@ void S_CodecUtilClose(snd_stream_t **stream);
 #define CODECTYPE_FLAC		(1U << 2)
 #define CODECTYPE_WAV		(1U << 3)
 #define CODECTYPE_MP3		(1U << 4)
-#define CODECTYPE_OGG		(1U << 5)
+#define CODECTYPE_VORBIS	(1U << 5)
 
-#define CODECTYPE_VORBIS	CODECTYPE_OGG
 #define CODECTYPE_WAVE		CODECTYPE_WAV
 #define CODECTYPE_MIDI		CODECTYPE_MID
 
